--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,6 @@
 SUBDIRS = src
+
+desktopdir = $(datadir)/applications/hildon
+desktop_DATA = hildon-status-menu.desktop
+
+EXTRA_DIST = hildon-status-menu.desktop.in
