--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,15 +6,7 @@ hildon_status_menu_CFLAGS = \
 	$(HILDON_CFLAGS)							\
 	$(LIBHILDONDESKTOP_CFLAGS)						\
 	$(GNOME_VFS_CFLAGS)							\
-	-DLOCALEDIR=\"$(localedir)\" 						\
-	-DDATADIR=\"$(datadir)\"						\
-	-DHD_DESKTOP_ENTRY_PATH=\"$(hildondesktopentrydir)\" 			\
-	-DHD_DESKTOP_CONFIG_PATH=\"$(hildondesktopconfdir)\"			\
-	-DHD_DESKTOP_MODULE_PATH=\"$(hildondesktoplibdir)\"			\
-	-DHD_DESKTOP_MENU_PATH=\"$(hildondesktopmenudir)\"			\
-	-DHD_DESKTOP_BACKGROUNDS_PATH=\"$(hildondesktopbackgroundsdir)\"	\
-	-DHD_PLUGIN_LOADER_MODULES_PATH=\"$(hildonpluginloaderlibdir)\"		\
-	-DHD_UI_POLICY_MODULES_PATH=\"$(hildonuipolicylibdir)\"
+	-DHD_DESKTOP_CONFIG_PATH=\"$(hildondesktopconfdir)\"
 
 hildon_status_menu_SOURCES = \
 	hildon-status-menu.c							\
