* configure.ac: Add hildondesktoplibdir variable (get from 	libhildondesktop-1.pc). 	* src/Makefile.am: Add hd-status-area-box.[ch] 	* src/hd-status-area-box.c: 	* src/hd-status-area-box.h: Add HDStatusAreaBox container, which 	displays the visible Status Area icons in two rows from left to right. 	* src/hd-status-area.c: 	* src/hd-status-area.h: Implement Status Area. 	* src/hildon-status-menu.c (main): Create a Status Menu and use it to 	open the Status Menu. 	* src/status-menu.conf.in: Add configuration for special (battery and 	signal) example Status Area icons.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@29040 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/configure.ac
+++ b/configure.ac
@@ -73,7 +73,7 @@ AC_SUBST(HILDON_LIBS)
 AC_SUBST(HILDON_CFLAGS)
 
 PKG_CHECK_MODULES(LIBHILDONDESKTOP,
-                  [libhildondesktop-1], 
+                  [libhildondesktop-1 >= 2.1.1], 
                   [AC_DEFINE(HAVE_LIBHILDONDESKTOP, [], [Whether libhildondesktop-1 is present on the system])], 
                   [])
 
@@ -93,6 +93,9 @@ AC_SUBST(hildondesktopconfdir)
 
 hildonstatusmenudesktopentrydir=`pkg-config libhildondesktop-1 --variable=hildonstatusmenudesktopentrydir`
 AC_SUBST(hildonstatusmenudesktopentrydir)
+
+hildondesktoplibdir=`pkg-config libhildondesktop-1 --variable=hildondesktoplibdir`
+AC_SUBST(hildondesktoplibdir)
 
 AC_OUTPUT([
 Makefile
