--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: hildon-status-menu
 Section: x11
 Priority: optional
-Maintainer: ? <?@?>
-Build-Depends: debhelper (>= 4.0.0), pkg-config, libhildon1-dev (>= 2.1.0), libosso-gnomevfs2-dev, libdbus-1-dev (>= 1.0.2), libhildondesktop1-dev (>= 2.1.0)
+Maintainer: Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+Build-Depends: debhelper (>= 4.0.0), pkg-config, libhildon1-dev (>= 2.1.0), libosso-gnomevfs2-dev, libdbus-1-dev (>= 1.0.2), libhildondesktop1-dev (>= 2.1.1)
 Standards-Version: 3.6.0
 
 Package: hildon-status-menu
