* configure.ac: Require new libhildondesktop version. 	* debian/hildon-status-menu.install: Install status-menu.plugins file. 	* src/hd-status-area.c (hd_status_area_init, hd_status_area_plugin_added_cb, 	  hd_status_area_plugin_removed_cb, 	  hd_status_area_configuration_loaded_cb): Add support for embedding 	  a clock widget in the Status Area. Use the plugin ids (.desktop file 	  names) to identify the plugins instead of the dl filenames. 	* src/status-menu.conf.in: Add X-Plugin-Configuration key. Use 	.desktop file names (plugin id) instead of dl filenames for the 	X-Signal-Plugin and X-Battery-Plugin keys. Add X-Clock-Plugin key. 	* src/status-menu.plugins.in: Add Plugin configuration file for plugin 	loading priority and the position of the item in the Status Area and 	Status Menu. 	* src/Makefile.am: Install status-menu.plugins file.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@29249 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/configure.ac
+++ b/configure.ac
@@ -73,7 +73,7 @@ AC_SUBST(HILDON_LIBS)
 AC_SUBST(HILDON_CFLAGS)
 
 PKG_CHECK_MODULES(LIBHILDONDESKTOP,
-                  [libhildondesktop-1 >= 2.1.1], 
+                  [libhildondesktop-1 >= 2.1.2], 
                   [AC_DEFINE(HAVE_LIBHILDONDESKTOP, [], [Whether libhildondesktop-1 is present on the system])], 
                   [])
 
@@ -101,5 +101,6 @@ AC_OUTPUT([
 Makefile
 hildon-status-menu.desktop
 src/status-menu.conf
+src/status-menu.plugins
 src/Makefile
 ])
