--- a/src/status-menu.conf.in
+++ b/src/status-menu.conf.in
@@ -2,9 +2,11 @@
 X-Plugin-Dir=@hildonstatusmenudesktopentrydir@
 X-Load-New-Plugins=true
 X-Load-All-Plugins=true
-X-Debug-Plugins=example-clock.desktop
+X-Plugin-Configuration=status-menu.plugins
 
 [X-Status-Area]
-X-Signal-Plugin=@hildondesktoplibdir@/example-signal-status-area-item.so
-X-Battery-Plugin=@hildondesktoplibdir@/example-battery-status-area-item.so
+X-Signal-Plugin=example-signal.desktop
+X-Battery-Plugin=example-battery.desktop
+X-Clock-Plugin=example-clock.desktop
+
 
