--- a/debian/rules
+++ b/debian/rules
@@ -111,7 +111,7 @@ binary-arch: build install
 	dh_strip --dbg-package="hildon-status-menu"
 	dh_compress
 	dh_fixperms
-#	dh_installinit -r -- start 51 2 3 4 . stop 20 0 1 5 6 .
+	dh_installinit --no-start -- start 51 2 3 4 . stop 20 0 1 5 6 .
 #	dh_perl
 #	dh_python
 	dh_makeshlibs -V
