* debian/changelog: Prepare 0.3.2 release. 	* debian/control: Updatre required libhildondesktop1-dev version. 	* src/hd-status-area.c (hd_status_area_items_configuration_loaded_cb, 	  hd_status_area_set_property): Update to changed libhildondesktop 	  API. 	* src/hd-status-menu.c (hd_status_menu_items_configuration_loaded_cb, 	  hd_status_menu_set_property): Update to changed libhildondesktop 	  API. 	* src/hildon-status-menu.c (main): Use new simple HDConfigFile API. 	* src/status-menu.plugins.in: Use the real clock plugin instead of the 	example.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@31420 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/src/status-menu.plugins.in
+++ b/src/status-menu.plugins.in
@@ -1,5 +1,5 @@
-[example-clock.desktop]
-X-Desktop-File=@hildonstatusmenudesktopentrydir@/example-clock.desktop
+[clock-plugin.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/clock-plugin.desktop
 X-Status-Area-Permanent-Item=Clock
 X-Status-Menu-Position=1
 
