--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 Build-Depends: debhelper (>= 4.0.0), pkg-config, libhildon1-dev (>= 2.1.4), libosso-gnomevfs2-dev, libdbus-1-dev (>= 1.0.2), libhildondesktop1-dev (>= 2.1.6)
-Standards-Version: 3.6.0
+Standards-Version: 3.8.0
 
 Package: hildon-status-menu
 Section: x11
@@ -14,6 +14,7 @@ Description: Hildon Status Menu application
 Package: hildon-status-menu-dbg
 Section: devel
 Architecture: any
-Depends: hildon-status-menu (= ${Source-Version})
+Priority: extra
+Depends: hildon-status-menu (= ${source:Version})
 Description: Debug symbols for Hildon Status Menu application
 
