added a startup script to Xsession.post
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@32029 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,7 @@ SUBDIRS = src
 desktopdir = $(datadir)/applications/hildon
 desktop_DATA = hildon-status-menu.desktop
 
+startupdir = $(sysconfdir)/X11/Xsession.post
+startup_DATA = 15hildon-status-menu
+
 EXTRA_DIST = hildon-status-menu.desktop.in
