--- a/debian/rules
+++ b/debian/rules
@@ -3,3 +3,6 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
 DEB_DH_INSTALLINIT_ARGS := --no-start -- start 51 2 3 4 . stop 20 0 1 5 6 .
+
+makebuilddir::
+	./autogen.sh --prefix=/usr --sysconfdir=/etc
