--- a/src/status-menu.plugins.in
+++ b/src/status-menu.plugins.in
@@ -3,25 +3,56 @@ X-Desktop-File=@hildonstatusmenudesktopentrydir@/clock-plugin.desktop
 X-Status-Area-Permanent-Item=Clock
 X-Status-Menu-Position=1
 
-[example-signal.desktop]
-X-Desktop-File=@hildonstatusmenudesktopentrydir@/example-signal.desktop
+[connui-cellular.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/connui-cellular.desktop
 X-Status-Area-Permanent-Item=Signal
 
-[example-battery.desktop]
-X-Desktop-File=@hildonstatusmenudesktopentrydir@/example-battery.desktop
+[status-area-applet-battery.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/status-area-applet-battery.desktop
 X-Status-Area-Permanent-Item=Battery
+X-Status-Menu-Position=2
 
-[example-icon.desktop]
-X-Desktop-File=@hildonstatusmenudesktopentrydir@/example-icon.desktop
+[connui-internet.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/connui-internet.desktop
+X-Status-Area-Position=1
 X-Status-Menu-Position=5
+
+[connui-cellular-forwarding.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/connui-cellular-forwarding.desktop
 X-Status-Area-Position=3
 
-[example-button.desktop]
-X-Desktop-File=@hildonstatusmenudesktopentrydir@/example-button.desktop
-X-Status-Menu-Position=100
-X-Status-Area-Position=1
-
-[example-volume.desktop]
-X-Desktop-File=@hildonstatusmenudesktopentrydir@/example-volume.desktop
+[volume.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/volume.desktop
+X-Status-Area-Position=7
 X-Status-Menu-Position=4
-X-Status-Area-Position=2
+
+[status-area-applet-profiles.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/status-area-applet-profiles.desktop
+X-Status-Area-Position=8
+X-Status-Menu-Position=3
+
+[rtcom-presence-ui.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/rtcom-presence-ui.desktop
+X-Status-Area-Position=9
+X-Status-Menu-Position=7
+
+[connui-bluetooth.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/connui-bluetooth.desktop
+X-Status-Area-Position=10
+X-Status-Menu-Position=6
+
+[location.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/location.desktop
+X-Status-Area-Position=11
+X-Status-Menu-Position=8
+
+[hildon-status-menu-usb.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/hildon-status-menu-usb.desktop
+X-Status-Area-Position=12
+X-Status-Menu-Position=9
+
+[sharing-manager-status.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/sharing-manager-status.desktop
+X-Status-Area-Position=13
+X-Status-Menu-Position=13
+
