* src/status-menu.plugins.in: Update priority of 	rtcom-notification-ui.desktop plugin. Fixes NB#100180, NB#100186 	* debian/changelog: Update
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@34868 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/src/status-menu.plugins.in
+++ b/src/status-menu.plugins.in
@@ -17,6 +17,10 @@ X-Desktop-File=@hildonstatusmenudesktopentrydir@/connui-internet.desktop
 X-Status-Area-Position=1
 X-Status-Menu-Position=5
 
+[rtcom-notification-ui.desktop]
+X-Desktop-File=@hildonstatusmenudesktopentrydir@/rtcom-notification-ui.desktop
+X-Status-Area-Position=2
+
 [connui-cellular-forwarding.desktop]
 X-Desktop-File=@hildonstatusmenudesktopentrydir@/connui-cellular-forwarding.desktop
 X-Status-Area-Position=3
