Make hildon-status-menu maemo-launched. Fixes: NB#101035 	* debian/hildon-status-menu.xsession: 	* debian/hildon-status-menu.install: 	* 15hildon-status-menu 	* Makefile.am: Use dh_installxsession instead of manual installation. 	* configure.ac: Add support for --enable-maemo-launcher flag. 	* debian/control: Add upstart-dev and maemo-launcher-dev dep. 	* debian/rules: Add support for maemo launcher and dh_installxsession 	* src/Makefile.am: Add maemo launcher flags 	* src/hildon-status-menu.c (main): Add g_thread_supported check. 	* debian/changelog: Update
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@35733 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,13 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
-DEB_DH_INSTALLINIT_ARGS := --no-start -- start 51 2 3 4 . stop 20 0 1 5 6 .
+ifeq (,$(findstring nolauncher,$(DEB_BUILD_OPTIONS)))
+DEB_CONFIGURE_EXTRA_FLAGS = --enable-maemo-launcher
+endif
 
 makebuilddir::
-	./autogen.sh --prefix=/usr --sysconfdir=/etc
+	AUTOGEN_SUBDIR_MODE=1 NOCONFIGURE=yes ./autogen.sh
+
+binary-install/hildon-status-menu::
+	dh_installxsession -u 'post 15'
+	dh_maemolauncher
