adding init script to make af-sb-init.sh script to start status menu on sbox
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@40889 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/configure.ac
+++ b/configure.ac
@@ -91,6 +91,9 @@ AC_SUBST(GNOME_VFS_LIBS)
 hildondesktopconfdir=${sysconfdir}/hildon-desktop
 AC_SUBST(hildondesktopconfdir)
 
+initscriptdir=${sysconfdir}/init.d
+AC_SUBST(initscriptdir)
+
 hildonstatusmenudesktopentrydir=`pkg-config libhildondesktop-1 --variable=hildonstatusmenudesktopentrydir`
 AC_SUBST(hildonstatusmenudesktopentrydir)
 
