Enhance status-area-visible implementation.
Take open task switcher and display state into account for status area
visible property.

Fixes: NB#NB#141707 - API for status area applets to detect if they are
invisible is absent.

Release 0.3.31.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,7 +20,11 @@ hildon_status_menu_SOURCES = \
 	hd-status-menu.c							\
 	hd-status-menu.h							\
 	hd-status-menu-box.c							\
-	hd-status-menu-box.h
+	hd-status-menu-box.h							\
+	hd-desktop.c								\
+	hd-desktop.h								\
+	hd-display.c								\
+	hd-display.h
 
 hildon_status_menu_LDFLAGS = \
 	$(HILDON_LIBS)	    							\
