Updated autotools files

--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,7 @@ AM_MAINTAINER_MODE
 AM_INIT_AUTOMAKE
 
 AC_PROG_CC
+AM_PROG_CC_C_O
 AC_PROG_INSTALL
 AM_PROG_LIBTOOL
 
@@ -79,6 +80,8 @@ PKG_CHECK_MODULES(LIBHILDONDESKTOP,
 
 AC_SUBST(LIBHILDONDESKTOP_LIBS)
 AC_SUBST(LIBHILDONDESKTOP_CFLAGS)
+
+PKG_CHECK_MODULES(X11, x11)
 
 PKG_CHECK_MODULES(GNOME_VFS, gnome-vfs-2.0 >= 2.8.3)
 AC_SUBST(GNOME_VFS_CFLAGS)
